--- a/clean_data_traficom.ipynb
+++ b/clean_data_traficom.ipynb
@@ -146,8 +146,9 @@
     "\n",
     "for y in range(2016, 2020):\n",
     "    print(y)\n",
-    "    xlsx = f'data/Henkilöautojen-määräaikaiskatsastusten-vuositilasto-{y}.xlsx'\n",
-    "    wb = load_workbook(filename = xlsx, read_only=True)\n",
+    "    fn_xlsx = f'data/Henkilöautojen-määräaikaiskatsastusten-vuositilasto-{y}.xlsx'\n",
+    "    fn_csv = f'data/Henkilöautojen-määräaikaiskatsastusten-vuositilasto-{y}.csv'\n",
+    "    wb = load_workbook(filename = fn_xlsx, read_only=True)\n",
     "    sheet = wb.active\n",
     "    header_row = header_row_number(sheet)\n",
     "    table = [[clean_value(c) for c in r] \\\n",
@@ -162,8 +163,7 @@
     "    df.dropna(inplace=True, axis=1, how='all')\n",
     "    df = df.astype(dtype={'model_year': 'int16', 'brand': 'category', 'model': 'category', 'fail_pct': 'float16'})\n",
     "    \n",
-    "    print(df.sample(5))\n",
-    "    print()\n"
+    "    df.to_csv(fn_csv)\n"
    ]
   }
  ],
