--- a/clean_data_traficom.ipynb
+++ b/clean_data_traficom.ipynb
@@ -12,101 +12,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2015\n",
       "2016\n",
-      "      model_year       brand    model   fail_pct  \\\n",
-      "1193        2004  Volkswagen  TOUAREG  26.953125   \n",
-      "45          2013       Skoda    RAPID   2.019531   \n",
-      "1213        2004       Honda   STREAM  29.406250   \n",
-      "698         2007      Toyota     AYGO   6.781250   \n",
-      "1354        2003        Seat   TOLEDO  35.843750   \n",
-      "\n",
-      "                                reason_1                            reason_2  \\\n",
-      "1193                         Käyttöjarru     Seisontajarrun dynamometritesti   \n",
-      "45                                  None                                None   \n",
-      "1213  Sisäinen valvontajärjestelmä (OBD)                         Käyttöjarru   \n",
-      "698                   Renkaat ja vanteet  Sisäinen valvontajärjestelmä (OBD)   \n",
-      "1354                         Käyttöjarru     Seisontajarrun dynamometritesti   \n",
-      "\n",
-      "                           reason_3  \n",
-      "1193     Jousitus ja iskunvaimennus  \n",
-      "45                             None  \n",
-      "1213  Käyttöjarrun dynamometritesti  \n",
-      "698                    Etuakselisto  \n",
-      "1354                   Etuakselisto  \n",
-      "\n",
       "2017\n",
-      "      model_year       brand         model  checked_cars   fail_pct  \\\n",
-      "1531        2012      Toyota          AYGO           278   4.320312   \n",
-      "1545        2012  Volkswagen         JETTA           935   9.953125   \n",
-      "482         2005      Suzuki  GRAND VITARA           227  13.656250   \n",
-      "756         2007  Mitsubishi       GRANDIS           124  36.281250   \n",
-      "336         2004      Suzuki         LIANA           158  25.953125   \n",
-      "\n",
-      "      driven_avg  driven_med                    reason_1  \\\n",
-      "1531       62000       53000                               \n",
-      "1545       90000       83000  Jousitus ja iskunvaimennus   \n",
-      "482       195000      190000                               \n",
-      "756       241000      220000    Ohjausnivelet ja -tangot   \n",
-      "336       172000      173000                Etuakselisto   \n",
-      "\n",
-      "                        reason_2     reason_3  \n",
-      "1531                                           \n",
-      "1545                Etuakselisto  Käyttöjarru  \n",
-      "482                                            \n",
-      "756                                            \n",
-      "336   Jousitus ja iskunvaimennus               \n",
-      "\n",
       "2018\n",
-      "      model_year       brand          model  checked_cars   fail_pct  \\\n",
-      "293         2005       Honda          CIVIC           742  15.898438   \n",
-      "1709        2015  Volkswagen           GOLF          4603   1.059570   \n",
-      "697         2007  Volkswagen         PASSAT          3840  20.859375   \n",
-      "712         2008        Audi             A3          1276  10.890625   \n",
-      "528         2006      Toyota  COROLLA VERSO          2006  13.007812   \n",
-      "\n",
-      "      driven_avg  driven_med                    reason_1  \\\n",
-      "293       176000      172000                Etuakselisto   \n",
-      "1709       55000       51000                               \n",
-      "697       268000      266000  Jousitus ja iskunvaimennus   \n",
-      "712       178000      171000  Jousitus ja iskunvaimennus   \n",
-      "528       233000      220000                 Käyttöjarru   \n",
-      "\n",
-      "                                reason_2                          reason_3  \n",
-      "293   Sisäinen valvontajärjestelmä (OBD)   Seisontajarrun dynamometritesti  \n",
-      "1709                                                                        \n",
-      "697      Seisontajarrun dynamometritesti  Dieselmoottorin pakokaasumittaus  \n",
-      "712                          Käyttöjarru     Käyttöjarrun dynamometritesti  \n",
-      "528           Jousitus ja iskunvaimennus                Renkaat ja vanteet  \n",
-      "\n",
       "2019\n",
-      "      model_year          brand      model  checked_cars   fail_pct  \\\n",
-      "1391        2014  Mercedes-Benz        CLA           298   7.718750   \n",
-      "798         2009         Jaguar         XF           144  16.671875   \n",
-      "1415        2014        Peugeot        208           649   3.849609   \n",
-      "600         2008            BMW         X3           279  13.617188   \n",
-      "573         2007     Volkswagen  GOLF PLUS          1058  21.359375   \n",
-      "\n",
-      "      driven_avg  driven_med                    reason_1  \\\n",
-      "1391       84000       81000                               \n",
-      "798       182000      183000              Taka-akselisto   \n",
-      "1415       58000       55000                Etuakselisto   \n",
-      "600       231000      228000  Jousitus ja iskunvaimennus   \n",
-      "573       174000      161000  Jousitus ja iskunvaimennus   \n",
-      "\n",
-      "                                reason_2                      reason_3  \n",
-      "1391                                                                    \n",
-      "798                                                                     \n",
-      "1415                                                                    \n",
-      "600                                                                     \n",
-      "573   Bensiinimoottorin pakokaasumittaus  Alustan kotelot ja pohjalevy  \n",
-      "\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 8206 entries, 0 to 1649\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   data_year     8206 non-null   int64  \n",
+      " 1   model_year    8206 non-null   int16  \n",
+      " 2   brand         8206 non-null   object \n",
+      " 3   model         8206 non-null   object \n",
+      " 4   fail_pct      8206 non-null   float16\n",
+      " 5   reason_1      7610 non-null   object \n",
+      " 6   reason_2      7609 non-null   object \n",
+      " 7   reason_3      7605 non-null   object \n",
+      " 8   checked_cars  5067 non-null   Int32  \n",
+      " 9   driven_avg    5067 non-null   Int32  \n",
+      " 10  driven_med    5067 non-null   Int32  \n",
+      "dtypes: Int32(3), float16(1), int16(1), int64(1), object(5)\n",
+      "memory usage: 601.0+ KB\n",
+      "None\n"
      ]
     }
    ],
@@ -144,7 +80,9 @@
     "    else:\n",
     "        return c.value\n",
     "\n",
-    "for y in range(2016, 2020):\n",
+    "dfs = []\n",
+    "    \n",
+    "for y in range(2015, 2020):\n",
     "    print(y)\n",
     "    fn_xlsx = f'data/Henkilöautojen-määräaikaiskatsastusten-vuositilasto-{y}.xlsx'\n",
     "    fn_csv = f'data/Henkilöautojen-määräaikaiskatsastusten-vuositilasto-{y}.csv'\n",
@@ -161,9 +99,17 @@
     "        if k and k not in COLS.values():\n",
     "            df.drop(inplace=True, columns=[k])\n",
     "    df.dropna(inplace=True, axis=1, how='all')\n",
-    "    df = df.astype(dtype={'model_year': 'int16', 'brand': 'category', 'model': 'category', 'fail_pct': 'float16'})\n",
+    "    df = df.astype(dtype={'model_year': 'int16', 'brand': 'category', 'model': 'category', 'fail_pct': 'Float16'})\n",
+    "    df.insert(0, 'data_year', y)\n",
     "    \n",
-    "    df.to_csv(fn_csv)\n"
+    "    df.to_csv(fn_csv, index=False)\n",
+    "    dfs.append(df)\n",
+    "\n",
+    "df_all = pd.concat(dfs)\n",
+    "df_all = df_all.astype(errors='ignore', dtype={'checked_cars': 'Int32', 'driven_avg': 'Int32', 'driven_med': 'Int32'})\n",
+    "df_all.to_csv('data/traficom_all.csv', index=False)\n",
+    "\n",
+    "print(df_all.info())"
    ]
   }
  ],
